<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.theodorakyriakou.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/basicborderspace"
        android:paddingLeft="@dimen/basicborderspace"
        android:paddingRight="@dimen/basicborderspace"
        android:paddingTop="@dimen/basicborderspace">

        <ImageView
            android:contentDescription="@string/photo_descr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/heritage_bnd" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/intro_text"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_gravity="center"
            android:typeface="serif"
            android:textColor="@android:color/black" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separativeviewsize"
            android:layout_marginTop="@dimen/basicborderspace"
            android:background="@android:color/holo_green_dark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basicborderspace"
            android:text="@string/first_question_text"
            android:typeface="serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/first_answer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_answer_hint"
            android:inputType="textShortMessage"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:imeOptions="actionDone" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separativeviewsize"
            android:layout_marginTop="@dimen/basicborderspace"
            android:background="@android:color/holo_green_dark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basicborderspace"
            android:text="@string/second_question_text"
            android:typeface="serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basicborderspace"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/second_answer_A_incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondquestionrb1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingLeft="@dimen/radiobuttonspace"
                android:paddingRight="@dimen/radiobuttonspace"/>

            <RadioButton
                android:id="@+id/second_answer_B_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondquestionrb2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingLeft="@dimen/radiobuttonspace"
                android:paddingRight="@dimen/radiobuttonspace"/>

            <RadioButton
                android:id="@+id/second_answer_C_incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondquestionrb3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingLeft="@dimen/radiobuttonspace"
                android:paddingRight="@dimen/radiobuttonspace"/>
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separativeviewsize"
            android:layout_marginTop="@dimen/basicborderspace"
            android:background="@android:color/holo_green_dark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basicborderspace"
            android:text="@string/thirdquestiontext"
            android:typeface="serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/basicborderspace"
            android:gravity="start"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/third_answer_one_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_checkbox1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/third_answer_two_incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_checkbox2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/third_answer_three_incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_checkbox3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/third_answer_four_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_checkbox4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separativeviewsize"
            android:layout_marginTop="@dimen/basicborderspace"
            android:background="@android:color/holo_green_dark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basicborderspace"
            android:text="@string/questionfourtext"
            android:typeface="serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basicborderspace"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fourth_answer_A_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourthquestionrb1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingLeft="@dimen/radiobuttonspace"
                android:paddingRight="@dimen/radiobuttonspace"/>

            <RadioButton
                android:id="@+id/fourth_answer_B_incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourthquestionrb2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingLeft="@dimen/radiobuttonspace"
                android:paddingRight="@dimen/radiobuttonspace"/>

            <RadioButton
                android:id="@+id/fourth_answer_C_incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourthquestionrb3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingLeft="@dimen/radiobuttonspace"
                android:paddingRight="@dimen/radiobuttonspace"/>
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separativeviewsize"
            android:layout_marginTop="@dimen/basicborderspace"
            android:background="@android:color/holo_green_dark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basicborderspace"
            android:text="@string/questionfivetext"
            android:typeface="serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/basicborderspace"
            android:gravity="start"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/fifth_answer_one_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question_checkbox1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/fifth_answer_two_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question_checkbox2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/fifth_answer_three_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question_checkbox3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/fifth_answer_four_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question_checkbox4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_send_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basicborderspace"
            android:text="@string/submit_text"
            android:onClick="submitResults"/>
    </LinearLayout>

</ScrollView>
